fixed lipadph fb url

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Site Maintenance</title>
+<title>Sixte Maintenance</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.8/semantic.min.css">
 
@@ -32,7 +32,7 @@
       </div>
     </h1>
     <p>This site may be temporarily unavailable due to maintenance. Please come back on 10AM to 6PM weekdays (GMT+8).</p>
-    <p>Follow the <a href="https://http://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
+    <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
         <p>&mdash; UP DREAM/PHIL-LIDAR Program Support Team</p>
     </div>
