add support email

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
+<html>
+<head>
 <title>Site Maintenance</title>
-
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.8/semantic.min.css">
-
+<meta http-equiv="refresh" content="0; URL='http://uptcagp-maintenance.github.io/'" />
 <style>
   
   body {
@@ -23,7 +24,8 @@
     color: #efefef; text-decoration: none;
   }
 </style>
-
+</head>
+<body>
 <div class='main-content'>
     <h1 class='ui inverted huge header'>
       <i class="plug icon"></i>
@@ -34,6 +36,8 @@
     <p>This site may be temporarily unavailable due to maintenance. Please come back on 10AM to 6PM weekdays (GMT+8).</p>
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
-        <p>&mdash; UP DREAM/PHIL-LIDAR Program Support Team</p>
+        <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">UP DREAM/PHIL-LIDAR Program Support Team</a></p>
     </div>
 </div>
+</body>
+</html>
