--- a/50x.html
+++ b/50x.html
@@ -33,7 +33,8 @@
         Under Maintenance
       </div>
     </h1>
-    <p>This site may be temporarily unavailable due to maintenance. Please come back on 10AM to 6PM weekdays (GMT+8).</p>
+    <p>Our servers are down due to preventive maintenance on holidays.</p>
+    <p>Our services will be back on January 3, 2020. Happy Holidays and Happy New Year!</p>
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
         <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">UP DREAM/PHIL-LIDAR Program Support Team</a></p>
