--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       </div>
     </h1>
     <p>Our servers are down due to preventive maintenance on holidays.</p>
-    <p>Our services will be back on January 3, 2020. Happy Holidays and Happy New Year!</p>
+    <p>Our services will be back on January 3, 2020.</p>
+    <p> Happy Holidays and Happy New Year!</p>
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
         <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">UP DREAM/PHIL-LIDAR Program Support Team</a></p>
