--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         Under Maintenance
       </div>
     </h1>
-    <p>This site might be having some issues or is currently under maintenance.</p>
-    <p>We apologize for the inconvenince.</p>
+    <p>Our servers are turned off to prevent damage to the external compressor units from the intake of ash due to the eruption of Taal Volcano.</p>
+    <p>We will be having our airconditioning units checks as soon as possible.</p>
+    <p>We apologize for the inconvenience.</p>
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
         <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">UP DREAM/PHIL-LIDAR Program Support Team</a></p>
