add message about taal volcano

--- a/50x.html
+++ b/50x.html
@@ -33,8 +33,8 @@
         Under Maintenance
       </div>
     </h1>
-    <p>Our servers are turned off to prevent damage to the external compressor units from the intake of ash due to the eruption of Taal Volcano.</p>
-    <p>We will be having our airconditioning units checks as soon as possible.</p>
+    <p>Our servers are turned off to prevent damage to the air conditioning external compressor units from the intake of ash due to the eruption of Taal Volcano.</p>
+    <p>We will be having our air conditioning units checks as soon as possible.</p>
     <p>We apologize for the inconvenience.</p>
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
