--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </h1>
     <p>Our servers are turned off to prevent damage to the external air conditioning compressor units from the intake of ash due to the eruption of Taal Volcano.</p>
-    <p>We will be having our air conditioning units checks as soon as possible.</p>
+    <p>We will be having our air conditioning units checked as soon as possible.</p>
     <p>We apologize for the inconvenience.</p>
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
     <div>
