changed the message

--- a/index.html
+++ b/index.html
@@ -32,18 +32,14 @@
         Under Maintenance
       </div>
     </h1>
-    <p>This site might be down due to technical issues or maintenance.</p>
-
-    <p>Our small data center is currently operating with limited air-conditioning. Due to this, most of our servers have been shut down to avoid data loss from the overheating of the data center. We are waiting on the procurement of the
-    maintenance contract for our air-conditioning units to be cleaned and repaired and this might take some time.</p> 
-
-    <p>If you have reached this page, while in the search for LiDAR data and derived data-sets such as agricultural, coastal, forestry, and hydrological resource maps, please feel free to e-mail us at lipad@dream.upd.edu.ph. Our volunteers who are former researchers under the UP DREAM/PHIL-LiDAR Program will try to look for the data your are requesting for.</p>
+    <p>Our network is currently having some technical difficulties.</p>
 
     <p>We apologize for the inconvenience and we thank you for your patience and understanding.</p>
 
     <p>Follow the <a href="https://facebook.com/lipadph">LiPAD Facebook Page</a> for updates on the UP DREAM/PHIL-LIDAR 1 Program LIPAD Portal.</p>
+    <p>Follow our <a href="https://blog.phl-microsat.upd.edu.ph">blog</a> for more updates on the PHL-Microsat/STAMINA4Space Program</p>
     <div>
-        <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">UP DREAM/PHIL-LIDAR Program Support Team</a></p>
+        <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">Software Systems Team - Project GRASPED - STAMINA4Space Program</a></p>
     </div>
 </div>
 </body>
