--- a/50x.html
+++ b/50x.html
@@ -33,7 +33,8 @@
         Under Maintenance
       </div>
     </h1>
-   <p>Our network is currently having some technical difficulties.</p>
+   <p>We are having our air conditioning units serviced today.</p>
+   <p>Services are expected to be back by 5pm.</p>
 
     <p>We apologize for the inconvenience and we thank you for your patience and understanding.</p>
 
