change maintenance message

--- a/50x.html
+++ b/50x.html
@@ -41,9 +41,8 @@
 
     <h2>Happy holidays!</h2>
 
-    <p>For LiDAR Data requests, you may still request data via the request forms linked in the <a href="https://lipad.dream.upd.edu.ph/#requestdata">https://LiPAD Portal (https://lipad.dream.upd.edu.ph)</a>.</p>
+    <p>For LiDAR Data requests, you may still request data via the request forms linked in the <a href="https://lipad.dream.upd.edu.ph/#requestdata">LiPAD Portal (https://lipad.dream.upd.edu.ph)</a>.</p>
 
-    <p>Follow our <a href="https://blog.phl-microsat.upd.edu.ph">blog</a> for more updates on the PHL-Microsat/STAMINA4Space Program</p>
     <p>Follow our <a href="https://blog.phl-microsat.upd.edu.ph">blog</a> for more updates on the PHL-Microsat/STAMINA4Space Program</p>
     <div>
         <p>&mdash; <a href="mailto:support@dream.upd.edu.ph">Software Systems Team - Project GRASPED - STAMINA4Space Program</a></p>
